--- a/Programers/Han/역순정렬하기.md
+++ b/Programers/Han/역순정렬하기.md
@@ -1,3 +1,5 @@
-SELECT NAME, DATETIME
-from ANIMAL_INS
-order by ANIMAL_ID desc
+```sql
+SELECT NAME, DATETIME 
+FROM ANIMAL_INS 
+ORDER BY ANIMAL_ID DESC;
+```
